--- a/assets/style.css
+++ b/assets/style.css
@@ -19,6 +19,7 @@
     max-width: 100%;
   } */
 
+/* --------------------------------------------HEADER */
 header {
   background-color: white;
   /* height: 826px; */
@@ -47,8 +48,8 @@ h2 {
   font-weight: 400;
   margin-top: 118px;
 }
-/* maria: selktieren h3 und a + rollr oder tretto für color */
 
+/* ----------------------------------------------------MAIN */
 /* ab hier beginnt die 1.section */
 .orbis {
   background-image: url(../assets/img/handshake.jpg);
