--- a/assets/style.css
+++ b/assets/style.css
@@ -19,6 +19,38 @@
     max-width: 100%;
   } */
 
+/* --------------------------------------------GENERAL*/
+
+section p {
+  margin-bottom: 20px; /* margin geschätzt */
+}
+section {
+  text-align: left;
+  color: #9e9e9e;
+}
+section > * {
+  margin-left: 220px;
+}
+.year {
+  font-size: 20px;
+  font-weight: 400;
+  padding-top: 150px;
+  margin-bottom: 40px; /*geschätzt*/
+}
+h3 {
+  font-size: 112px;
+  color: white;
+  margin-bottom: 40px;
+}
+.description {
+  margin-bottom: 120px; /*geschätzt*/
+}
+a {
+  padding: 16px 20px;
+  text-decoration: none;
+  font-size: 16px;
+}
+
 /* --------------------------------------------HEADER */
 header {
   background-color: white;
@@ -50,7 +82,46 @@ h2 {
 }
 
 /* ----------------------------------------------------MAIN */
-/* ab hier beginnt die 1.section */
+
+.number {
+  font-size: 165px;
+  font-family: fjalla, sans-serif;
+  margin: 0 200px 0 auto;
+  width: 200px;
+}
+
+.white {
+  color: white;
+}
+.black {
+  color: black;
+}
+.gray {
+  color: #9e9e9e;
+}
+
+.white-border {
+  border: 2px solid white;
+}
+
+.black-border {
+  border: 2px solid black;
+}
+
+/* Hover */
+
+.orbis a:hover,
+.galitos a:hover {
+  background-color: white;
+  color: black;
+}
+
+.orbis a:hover + p,
+.galitos a:hover + p {
+  color: white;
+}
+
+/* ---------------------------------------- 1.ORBIS */
 .orbis {
   background-image: url(../assets/img/handshake.jpg);
   background-repeat: no-repeat;
@@ -58,56 +129,6 @@ h2 {
   background-size: cover;
   background-attachment: fixed;
   height: 826px;
-}
-section p {
-  margin-bottom: 20px; /* margin geschätzt */
-}
-section {
-  text-align: left;
-  color: #9e9e9e;
-}
-section > * {
-  margin-left: 220px;
-}
-.year {
-  font-size: 20px;
-  font-weight: 400;
-  padding-top: 150px;
-  margin-bottom: 40px; /*geschätzt*/
-}
-h3 {
-  font-size: 112px;
-  color: white;
-  margin-bottom: 40px;
-}
-.description {
-  margin-bottom: 120px; /*geschätzt*/
-}
-a {
-  padding: 16px 20px;
-  text-decoration: none;
-  font-size: 16px;
-}
-.white {
-  color: white;
-}
-.black {
-  color: black;
-}
-
-a .white {
-  color: white;
-  border: 2px solid white;
-}
-a .black {
-  color: black;
-  border: 2px solid black;
-}
-.number {
-  font-size: 165px;
-  font-family: fjalla, sans-serif;
-  margin: 0 200px 0 auto;
-  width: 200px;
 }
 .rollr {
   background-image: url(../assets/img/rollr.png);
