--- a/assets/style.css
+++ b/assets/style.css
@@ -127,7 +127,7 @@ h2 {
   color: white;
 }
 
-/* ---------------------------------------- 4 SECTIONS */
+/* ----------------------------------------  4 SECTIONS */
 .orbis {
   background-image: url(../assets/img/handshake.jpg);
   background-repeat: no-repeat;
@@ -161,7 +161,7 @@ h2 {
   height: 826px;
 }
 
-/*#------------------------------what more + footer */
+/*  ------------------------------what more + footer */
 .whatmore {
   font-family: work, sans-serif;
   font-weight: 400;
